--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -1358,9 +1358,46 @@
 
 
 \section{Kreise und Kugeln}
+
     \subsection{Kreise}
+
+        \paragraph{} Letzte relevant Objektgruppe ist die der Kreise und Kugeln, wobei Letztere lediglich auf den $\R^3$ angewandte Formen der Ersten sind. Kreise werden über einen Mittelpunkt und einen Radius definiert. Alle Punkte, welche einen Distanz gleich dem Radius zum Mittelpunkt aufweisen, sind teil der Kreismenge, die den Kreis algebraisch beschreibt. Wie bei allen anderen Sektionen der Geometrie ist es von Nöten, das Ganze zu visualisieren:
+
+        \begin{center}
+            \definecolor{purp}{rgb}{0.5,0,0.5}
+            \definecolor{lightblue}{rgb}{0,0.7,0.7}
+            \begin{tikzpicture}[>=triangle 45]
+                \draw[->,line width=0.8pt] (-5.5,0,0) -- (5.5,0,0) node[below] {$x_1$};
+                \draw[->,line width=0.8pt] (0,-5.5,0) -- (0,5.5,0) node[right] {$x_2$};
+                \foreach  \x in {-5,...,-1,1,2,...,5}
+                    \draw[line width=0.8pt] (\x,0.1,0) -- (\x,-0.1,0) node[below] {\x};
+                \foreach  \x in {-5,...,-1,1,2,...,5}
+                    \draw[line width=0.8pt] (-0.1,\x,0) -- (0.1,\x,0) node[right] {\x};
+                \draw[line width=0.8pt] (-0.25,-0.25) node {$O$};
+                \draw[line width=0.8pt,color=blue,fill=blue,fill opacity=0.3] (3.5,2) arc (0:360:1.5);
+                \draw[line width=0.8p] (2,2) circle (1pt);
+                \draw[line width=0.8p,color=purp] (2.2,1.7) node {$M (2,2)$};
+                \draw[->,line width=0.8p,color=purp] (2,2) -- (3.06,3.06);
+                \draw[line width=0.8p,color=purp] (2.33,2.63) node {$r$};
+                \draw[line width=0.8pt,color=lightblue,fill=lightblue,fill opacity=0.3] (-1,-3) arc (0:360:2);
+                \draw[line width=0.8p] (-3,-3) circle (1pt);
+                \draw[line width=0.8p,color=purp] (-2.8,-3.3) node {$M (2,2)$};
+                \draw[->,line width=0.8p,color=purp] (-3,-3) -- (-4.05,-1.30);
+                \draw[line width=0.8p,color=purp] (-3.33,-2.05) node {$r$};
+            \end{tikzpicture}
+        \end{center}
+
+        \paragraph{} Hieraus ergibt sich eine einfache Formel, um einen Kreis zu definieren, aus welcher auch die allgemeine Kreisgleichung folgt:
+        \begin{align*}
+            \qquad \qquad \qquad &|\vv{MP}| = r ; P \in M_K \\
+                 \Leftrightarrow &|\vv{MP}|^2 = r^2 \\
+                 \Leftrightarrow &|\vv{p} - \vv{m}|^2 = r^2 \\
+                 \Leftrightarrow &\left|\left(\begin{array}{c} x - a \\ y - b\end{array}\right)\right|^2 = r^2 ; (x,y) = (p_x,p_y) \land (a,b) = (m_x,m_y) \\
+                 \Leftrightarrow &\left(\sqrt{(x - a)^2 + (y - b)^2}\right)^2 = r^2 \\
+                 \Leftrightarrow &\sqrt{(x - a)^2 + (y - b)^2} = r^2 \\
+        \end{align*}
+
+        %Damit sind wir schon bei der ersten Eigenschaft eines Kreises angelangt: ein Kreis kann ausschließlich in einem zweidimensionalen Vektorraum definiert werden; im $\R^3$ ergibt sich aus der Definition eine Kugel
     \subsection{Kugeln}
-\section{Spatprodukt}
-\section{Dyadisches Produkt}
 \section{Sätze}
 \input{kap5/saetze}
