--- a/kap8/kap8.tex
+++ b/kap8/kap8.tex
@@ -262,7 +262,7 @@ Der Euklidische Algorithmus ist eine effiziente Methode um den ggT (größter ge
 
 \begin{Definition} 
 
-Seien $a,b \in \N$. Sei $a$ die größere Zahl, also $a > b$. Sei $b$ kein Teiler von $a$. Nun wiederholt man immer wieder die Euklidische Division mit den Resten der vorherigen Division. Nach hyperlink{teiler_ab_teiler_br}{\textcolor{titlepagecolor}{\underline{diesem Satze}}} sind die Teiler von $a$ und $b$ auch die Teiler von $b$ und $r$. Man möchte ja den ersten gemeinsamen Teiler der Zahlen $a$ und $b$ finden.\\\\
+Seien $a,b \in \N$. Sei $a$ die größere Zahl, also $a > b$. Sei $b$ kein Teiler von $a$. Nun wiederholt man immer wieder die Euklidische Division mit den Resten der vorherigen Division. Nach \hyperlink{teiler_ab_teiler_br}{\textcolor{titlepagecolor}{\underline{diesem Satz}}} sind die Teiler von $a$ und $b$ auch die Teiler von $b$ und $r$. Man möchte ja den ersten gemeinsamen Teiler der Zahlen $a$ und $b$ finden.\\\\
 $$
 \begin{array}{rccl}
 a & = & q_{1} \cdot b + r_{1} \qquad \qquad &0 < r_{1}  < b \\
