Die Seiten sind aber nicht zufriedenstellend

--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -1,4 +1,5 @@
 \chapter{Folgen}
+\chapterauthor{Clara}
 
 
 
@@ -171,7 +172,7 @@ Man sagt $a_n$ konvergiert gegen $g=\lim\limits_{n\to\infty}a_n$.
 \end{Definition}
 
 
- 
+
 \begin{Theorem}
 
 $$\lim\limits_{n\to\infty}a_n=g\Leftrightarrow \lim\limits_{n\to\infty}(a_n-g)=0$$
@@ -226,5 +227,3 @@ $$\lim\limits_{n\to\infty}a_n=g \ \Leftrightarrow\ \forall  \epsilon > 0\quad \e
 Die Grenzwertsätze führen die Grenzwerte komplizierter Folgen auf einfachere Grenzwertbetrachtungen bekannter Folgen zurück.\\
 \begin{Theorem}
 \end{Theorem}
-
-
