--- a/kap10/kap10.tex
+++ b/kap10/kap10.tex
@@ -1,4 +1,6 @@
 \chapter{Algorithmik}
+\chapterauthor{Rémy}
+
 \section{Algorithmen und Programmierung}
 \begin{Definition}
 	Algorithmen besitzen die folgenden charakteristischen Eigenschaften:
