--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -1,4 +1,6 @@
 \chapter{Integrale}
+\chapterauthor{Rémy}
+
 \section{Einführung - Stammfunktionen}
 \begin{Definition}
   Sei $f$ eine Funktion, die über einem Intervall $I\in\R$ definiert ist. Man nennt jede Funktion $F$, die auf $I$ differenzierbar ist, für die gilt $F'(x)=f(x)$ ,$\forall x\in I$ eine \emph{Stammfunktion} von $f$.\\
