--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -1,10 +1,11 @@
 \chapter{Exponentialfunktionen}
+\chapterauthor{Clara}
 
 \begin{Definition}
 Man bezeichnet als Exponentialfunktion eine Funktion der Form $x\rightarrow a^x$ mit $a\in \R^+\backslash 1$\\
 $x$ ist die Variable und wird \textit{Exponent} oder \textit{Hochzahl} genannt.\\
 $a$ nennt man \textit{Basis} oder \textit{Grundzahl}, sie ist für jede Funktion fest forgegeben.\\\\
-Allgemeiner gilt jede Funktion, bei der die Variable im Exponenten steht als Exponentialfunktion. 
+Allgemeiner gilt jede Funktion, bei der die Variable im Exponenten steht als Exponentialfunktion.
 \end{Definition}
 
 
@@ -666,11 +667,11 @@ Sei $f(x)= a^x$ mit $a>1$ und $g(x)=x^n$ mit n $\in \R$:\\
 
 \left.\parbox{0.5\textwidth}{
 \begin{itemize}
-\item $\lim\limits_{x\to +\infty} f(x)\cdot g(x) = \lim\limits_{x\to +\infty} = a^x \cdot x^n= +\infty $ 
+\item $\lim\limits_{x\to +\infty} f(x)\cdot g(x) = \lim\limits_{x\to +\infty} = a^x \cdot x^n= +\infty $
 \item $\lim\limits_{x\to -\infty} f(x)\cdot g(x) = \lim\limits_{x\to -\infty}a^x \cdot x^n= 0$ \\\\
-\item $\lim\limits_{x\to +\infty} \dfrac{f(x)}{g(x)} = \lim\limits_{x\to +\infty}\dfrac{a^x}{x^n} = +\infty $ 
+\item $\lim\limits_{x\to +\infty} \dfrac{f(x)}{g(x)} = \lim\limits_{x\to +\infty}\dfrac{a^x}{x^n} = +\infty $
 \item $\lim\limits_{x\to -\infty} \dfrac{f(x)}{g(x)} = \lim\limits_{x\to -\infty}\dfrac{a^x}{x^n} = 0$ \\\\
-\item $\lim\limits_{x\to +\infty} \dfrac{g(x)}{f(x)} = \lim\limits_{x\to +\infty}\dfrac{x^n}{a^x} =  0$ 
+\item $\lim\limits_{x\to +\infty} \dfrac{g(x)}{f(x)} = \lim\limits_{x\to +\infty}\dfrac{x^n}{a^x} =  0$
 \item $\lim\limits_{x\to -\infty} \dfrac{g(x)}{f(x)} = \lim\limits_{x\to -\infty}\dfrac{x^n}{a^x} = \pm\infty$
 \end{itemize}
 } \right\}$ \quad \textbf{Croissances comparées}
@@ -727,13 +728,13 @@ Eine wichtige Eigenschaft ist auch, dass $f'(0)=\lambda$ ist. Dies kann man auf 
 \text{Vorheriges Ergebnis genutzt:}&f'(x)=a^x\cdot\lim\limits_{h\to0}\dfrac{a^h-1}{h}\Rightarrow f'(0)=a^0\cdot\lim\limits_{h\to0}\dfrac{a^h-1}{h}=1\cdot\lim\limits_{h\to0}\dfrac{a^h-1}{h}=\textcolor{red}{\lambda}
 \end{array}
 \\\\\\
-$\lambda$ entspricht also auch der Steigung der Tangenten der Ausgangsfunktion an der y-Achse. 
+$\lambda$ entspricht also auch der Steigung der Tangenten der Ausgangsfunktion an der y-Achse.
 
 
 \subsubsection{Exponentialfonktionen mit natürlicher Basis}
 
 \begin{Theorem}
-Die natürliche Exponentialfunktion überstimmt mit ihrer Ableitungsfunktion. 
+Die natürliche Exponentialfunktion überstimmt mit ihrer Ableitungsfunktion.
 $$f(x)=e^x\Rightarrow f'=e^x$$
 \end{Theorem}
 \begin{Theorem}
