--- a/kap14/kap14.tex
+++ b/kap14/kap14.tex
@@ -1,4 +1,5 @@
 \chapter{ANHANG: Physik}
+\chapterauthor{Bruno}
 
 
 \section{La physique des particules}
@@ -297,7 +298,7 @@ L'énergie peut cependant changer de forme par un travail, transfert d'énergie 
 \item chaleur $Q$ (chaleur)
 \end{itemize}
 
-On retient aussi : 
+On retient aussi :
 $$W_{AB}(\vv{P}) = m\cdot g \cdot (z_{A}-z_{B})$$
 $$W_{AB}(\vv{f}) = - f \cdot \widetilde{AB} $$
 $$W_{AB}(\vv{R}_{n}) = 0$$
@@ -315,7 +316,7 @@ La \textbf{puissance moyenne} mesure la quantité d'énergie transférée par se
 La \textbf{puissance instantanée}:
 $$P(\vv{F}) = \vv{F}\cdot \vv{v} = F\cdot v \cdot \cos{\alpha}$$\\
 
-Le \textbf{TEC}: 
+Le \textbf{TEC}:
 $$\Delta {E_{c}}_{A\rightarrow B} = \sum W_{AB}(\vv{F}_{ext})$$
 
 \end{Definition}
@@ -346,10 +347,10 @@ La force de frottement du fluide sur le corps peut être donnée par l'expressio
 $$f=k\cdot v^n$$
 où $k$ contient le coefficient de pénétration du corps et la nature du fluide et $n$ est réel. Ce sont des coefficients seulement déterminables par des expériences.\\\\
 Pour des petites vitesses (quelques cm/s), $n=1$, la force de frottement est donc proportionnelle à la vitesse du corps. Dans le cas d'une sphère de rayon $R$ et $\eta$ la viscosité,
-$$f=(6\pi\cdot\R\cdot\eta )\cdot v$$ 
-Pour des vitesses plus grandes (quelques m/s), $n=2$ convient mieux. Si $S$ est la section, $C_{x}$ le coefficient de trainée, $\rho_{fluide}$ la masse volumique, 
+$$f=(6\pi\cdot\R\cdot\eta )\cdot v$$
+Pour des vitesses plus grandes (quelques m/s), $n=2$ convient mieux. Si $S$ est la section, $C_{x}$ le coefficient de trainée, $\rho_{fluide}$ la masse volumique,
 $$ f=\frac{1}{2}C_{x}\cdot\rho_{fluide}\cdot S\cdot v^2 $$  \\\\
-Dans une chute non libre, le régime \textbf{permanent} est atteint quand $\vv{P}=-\vv{f}$, donc quand $a=\dfrac{dv}{dt}=0$.  
+Dans une chute non libre, le régime \textbf{permanent} est atteint quand $\vv{P}=-\vv{f}$, donc quand $a=\dfrac{dv}{dt}=0$.
 \end{Definition}
 
 
@@ -387,7 +388,7 @@ $$\dfrac{T^2}{a^3}=cste$$
 \begin{Definition}
 A COMPLETER APRES AVOIT FAIT LES OSCILLATEURS ÉLECTRIQUES
 
-La période propre d'un pendule simple, non amorti est : 
+La période propre d'un pendule simple, non amorti est :
 $$T_{0}=2\pi\sqrt{\dfrac{l}{g}}$$
 Bien que $T_{0}$ est aussi proportionnel à l'amplitude $\theta$, ce facteur peut être négligé dans nos calculs\\
 
@@ -408,7 +409,7 @@ Dans le cas d'un système oscillant amorti, on distingue entre un régime \textb
 \begin{Definition}
 
 La bande passante est l'intervalle des fréquences pour lesquelles le résonnateur donne une réponse importante en amplitude. Elle est déterminable sur le graphique de l'amplitude en fonction de la fréquence. On fait $\dfrac{X_{mres}}{\sqrt{2}}$ et on retrouve la largeur de la bande passante $\Delta f = f_{2} - f_{1}$. Il en résulte le facteur de qualité $Q$:
-$$Q=\dfrac{f_{res}}{\Delta f} \approx \dfrac{f_{0}}{f_{2}-f_{1}} $$  
+$$Q=\dfrac{f_{res}}{\Delta f} \approx \dfrac{f_{0}}{f_{2}-f_{1}} $$
 
 \end{Definition}
 
@@ -421,7 +422,7 @@ $$Q=\dfrac{f_{res}}{\Delta f} \approx \dfrac{f_{0}}{f_{2}-f_{1}} $$
 La célérité (vitesse de propagation) de l'onde est constante dans un milieu non dispersif.
 $$v=\dfrac{d}{\Delta t} = \dfrac{\lambda}{T} = \lambda \cdot f$$
 
-Une onde est périodique dans l'espace et dans le temps. Dans un moment donné, les points $P_{1}$ et $P_{2}$ du milieu (en gros, deux courbes d'onde) sont en phase si 
+Une onde est périodique dans l'espace et dans le temps. Dans un moment donné, les points $P_{1}$ et $P_{2}$ du milieu (en gros, deux courbes d'onde) sont en phase si
 $$d(P_{1};P_{2})=k\cdot\lambda\quad;k\in\Z$$
 et ils sont en opposition de phase si
 $$d(P_{1};P_{2})=(2k+1)\cdot\dfrac{\lambda}{2};\quadk\in\Z$$
@@ -447,12 +448,12 @@ $$\theta=\dfrac{\lambda}{a}$$
 \begin{Definition}
 
 La force magnétique s'exerçant sur une particule de charge $q$ est
-$$\vv{F}_{m} = q \cdot (\vv{v}\times \vv{B})$$, 
+$$\vv{F}_{m} = q \cdot (\vv{v}\times \vv{B})$$,
 d'après la loi de Lorentz. On utilise la règle de la main droite pour le produit vectoriel. \\
 Et dans la plupart des cas, $\alpha$ vaut $\ang{90}$
 $$\Rightarrow F_{m} = |q| \cdot v \cdot B \cdot \sin(\alpha)$$
 
-La trajectoire d'une particule chargée dans un champ magnétique est circulaire, lorsqu'on reste dans un plan. La trajectoire dans un champ électrique est une parabole. La trajectoire rectiligne suivant l'accélération dans $E$ passe par le milieu d'une des faces du condensateur. 
+La trajectoire d'une particule chargée dans un champ magnétique est circulaire, lorsqu'on reste dans un plan. La trajectoire dans un champ électrique est une parabole. La trajectoire rectiligne suivant l'accélération dans $E$ passe par le milieu d'une des faces du condensateur.
 
 \end{Definition}
 
@@ -463,10 +464,3 @@ La trajectoire d'une particule chargée dans un champ magnétique est circulaire
 \begin{Definition}
 Faites moi de Laplace!
 \end{Definition}
-
-
-
-
-
-
-
