--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -1,5 +1,5 @@
 \chapter{Reihen}
-
+\chapterauthor{Clara}
 \begin{Definition}
 Eine Reihe ist eine Folge, deren Glieder die Partialsummen einer anderen Folge ist. Das bedeutet, dass das $n-te$ Glied der Reihe, die Summe der ersten $n$ Glieder einer anderen Folge ist. \\
 Man hat also:
@@ -127,4 +127,3 @@ $s_{n}=\sum\limits_{i=x}^{x+n-1}a_{i}\\
 =a_{x}\cdot \sum\limits_{k=0}^{n-1}q^k\\
 =a_{x}\cdot \dfrac{1-q^{n}}{1-q}$
 \end{Beweis}
-
