--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -1,4 +1,5 @@
 \chapter{Funktionsuntersuchung}\label{Funktionsuntersuchung}
+\chapterauthor{Bruno}
 
 Die \textbf{Analysis} (griechisch  análysis, deutsch "`Aufl"osung"') ist ein Teilgebiet der Mathematik.  Die Untersuchung von reellen und komplexen Funktionen hinsichtlich Stetigkeit, Differenzierbarkeit und Integrierbarkeit z"ahlt zu den Hauptgegenst"anden der Analysis. Die hierzu entwickelten Methoden sind in allen Natur- und Ingenieurwissenschaften von großer Bedeutung.\\
 
@@ -329,7 +330,7 @@ $|D_{f}| \leq |W_{f}|$.\quad Beispiel: $\quad f(x)=2x$ \quad mit \quad $D_{f}=\Z
 
 $|D_{f}| = |W_{f}|$. \quad Beispiel: $\qquad f(x)=x^3 $\\\\
 \end{description}
-Ausführlichere Erklärungen hier, einfach auf die Links klicken:\\ 
+Ausführlichere Erklärungen hier, einfach auf die Links klicken:\\
 \href{http://www.math.uni-konstanz.de/~huynh/Vorkurs2015/Vorlesung_12.pdf}{\textcolor{blue}{Uni Vorlesungsskript}} \qquad oder \qquad
 \href{https://www.mathe-online.at/mathint/fun1/i_isb.html}{\textcolor{blue}{Überschaubar(er) mit Graphen}} \\
 
