--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -1,4 +1,6 @@
 \chapter{Trigonometrie}
+\chapterauthor{Rémy}
+
 \section{Kurze Wiederholung}
 \begin{Definition}
   \begin{minipage}{0.5\textwidth}
