--- a/kap9/kap9.tex
+++ b/kap9/kap9.tex
@@ -1,4 +1,5 @@
 \chapter{Matrizen}
+\chapterauthor{Bruno}
 
 	\section{Lineare Gleichungssysteme und Gau"salgorythmus}
 
@@ -49,9 +50,9 @@ x+0y+0z&=&1\\
 $\mathbb{L}=\{(1;2;3) \}$ Die Lösungsmenge wird als n-Tupel (geordente Objekte) alphabetisch sortiert.
 
 	\section{LGS mit dem Taschenrechner l"osen}
-	
+
 	\subsection{Eindeutig l"osbare lineare Gleichungssysteme}
-	
+
 Ein lineares Gleichungssystem l"asst sich sehr viel schneller mit dem Taschgenrechner l"osen:\\
 
 $\Rightarrow$ $\left\{ \begin{array}{rcl}
@@ -74,7 +75,7 @@ $\Leftrightarrow$ $\left\vert \begin{array}{rccl}
 1&0&0&1\\
 0&1&0&2 \\
 0&0&1&3\\
-\end{array}\right\vert$ \qquad $\Rightarrow \mathbb{L}=\{(1;2;3) \}$ \\ 
+\end{array}\right\vert$ \qquad $\Rightarrow \mathbb{L}=\{(1;2;3) \}$ \\
 
 Die L"osungsmenge wird als n-Tupel angegeben.\\
 Wenn sich Werte mit Kommazahlen ergeben, ist es n"utzlich, im Taschenrechner [Math] $+$ [1](Frac) einzugeben, um sich die Werte in Br"uchen anzeigen zu lassen.\\
@@ -99,8 +100,6 @@ $\Rightarrow$ $\left\vert \begin{array}{rccl}
 $\Leftrightarrow$ $\left\vert \begin{array}{rccl}
 1&-2&0&10\\
 0&0&1&5 \\
-\end{array}\right\vert$  \qquad $\Rightarrow \mathbb{L}=\{(2t+10;t;t+5|t\in\R) \}$ \\  
+\end{array}\right\vert$  \qquad $\Rightarrow \mathbb{L}=\{(2t+10;t;t+5|t\in\R) \}$ \\
 
 Auch hier wird die L"osungsmenge als n-Tupel angegeben, in Abh"angigkeit eines Faktors, dessen Wertebereich in der L"osungsmenge ebenfalls angegeben werden muss.\\\\
-
-
