--- a/kap13/kap13.tex
+++ b/kap13/kap13.tex
@@ -1,4 +1,5 @@
 \chapter{Logarithmen}
+\chapterauthor{Clara}
 
 \begin{Definition}
 Der Logarithmus einer Zahl ist der Exponent, mit dem die Basis des Logarithmus' potenziert werden muss, um die gegebene Zahl zu erhalten. Logarithmen sind nur für positive reelle Zahlen definiert, die Basis muss positiv und ungleich $1$  sein
@@ -22,7 +23,7 @@ $\begin{array}{lcccl}
 \mbox{Dekadischer Logarithmus}&:&\lg a&:=&\log_{10}a
 \end{array}$
 \\
-	\section{Eigenschaften}	
+	\section{Eigenschaften}
 
 \begin{itemize}
 \item$f(x)=\log_bx$
