--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -226,7 +226,7 @@ Eine Asymptote ist eine Gerade oder Kurve, die sich dem Graphen einer Funktion i
 \indent \qquad $\lim\limits_{x \rightarrow x_{0^{+}}} f(x) = \pm \infty$\\
 dann ist die Gerade $x=x_{0}$ eine senkrechte Asymptote von $f$.\\
 \item \textbf{Waagerechte Asymptote}: Konvergiert $f$ f"ur $x\rightarrow \infty$ gegen eine reelle Zahl $g\in \R$, das hei"st $\indent \qquad\lim\limits_{x \rightarrow x_{0^{+}}}{f(x)}=g$.\\
-Die Gerde $y=g$ ist die \textbf{waagerechte} Asymptote von $f$. Das Gleiche gilt f"ur $\lim\limits_{x \rightarrow -\infty}$.\\
+Die Gerade $y=g$ ist die \textbf{waagerechte} Asymptote von $f$. Das Gleiche gilt f"ur $\lim\limits_{x \rightarrow -\infty}$.\\
 Bei gebrochenrationalen Funktionen ist dies der Fall, wenn der Z"ahlergrad kleiner (dann ist $g=0$) oder gleich dem Nennergrad $m$ ist.\\
 \item \textbf{Schr"age Asymptote}: Sie ist eine Gerade ($g:\R \rightarrow \R$), der sich $f$ mit $|x|\rightarrow \infty$ beliebig ann"ahert:\\
 \indent \qquad$\lim\limits_{x \rightarrow \infty}{[f(x)-g(x)]}=0$ oder $\lim\limits_{x \rightarrow -\infty}{[f(x)-g(x)]}=0$\\
