--- a/kap8/kap8.tex
+++ b/kap8/kap8.tex
@@ -169,7 +169,7 @@ Anders gesagt gibt es zu jeder Zahl immer Kongruenzklassen.
 Es seien $n \in \N$ mit $n \geq 2$ und $r \in \N$ mit $0 \leq r < n$ \\
 Die Menge $ [r] \mod n $ ist die Menge aller ganzen Zahlen $z$, die bei der euklidischen Division durch $n$ den Rest $r$ liefern.\\\\
 Sie ist eine Menge von Zahlen, die den Abstand $n$ zueinander haben.\\\\\\
-Für Kongruenzen sind mit der Addition und der Multiplikation verträglich. Seien $a, b, a^{*}, b^{*}$ ganze Zahlen:\\\\
+Kongruenzen sind mit der Addition und der Multiplikation verträglich. Seien $a, b, a^{*}, b^{*}$ ganze Zahlen:\\\\
  $\Rightarrow$ $\left\{ \begin{array}{rcl}
 $ a & \equiv & a^{*} \mod n  $\\
 $ b & \equiv & b^{*}\mod n  $
